# libadhan

./: .gitignore  CMakeLists.txt  adhan.pc.in
.github/workflows/: Tests-CI.yml
cmake/: adhanConfig.cmake.in
examples/: example.c
include/: adhan.h
src/: CMakeLists.txt  astronomical.c  calculation_parameters.c  calendrical_helper.c  data_components.c  prayer_times.c  solar_coordinates.c  solar_time.c
test/: CMakeLists.txt  astronomical_test.cpp  calculation_method_test.cpp  calculation_parameters_test.cpp  double_utils_test.cpp  prayer_times_test.cpp  test.cpp
